<resources>
    <string name="app_name">100NTS</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_email">Not a valid email address</string>
    <string name="invalid_password">Password must be >5 characters (with at least one digit, lower and uppercase letter and special character)</string>
    <string name="wrong_password">Wrong password</string>
    <string name="login_failed">Login failed</string>
    <string name="view_all_sites">View all sites</string>
    <string name="all_sites">All sites</string>
    <string name="top_sites">Top-rated sites</string>
    <string name="top_users">User ranking</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_surname">Surname</string>
    <string name="prompt_password2">Re-enter password</string>
    <string name="action_register">Register</string>
    <string name="rank_participation">Participate in the rankings</string>
    <string name="reg_form">Registration form</string>
    <string name="invalid_name">Name must be >3 characters (letters only)</string>
    <string name="invalid_surname">Surname must be >3 characters (letters only)</string>
    <string name="nonmatching_passwords">Passwords do not match</string>
    <string name="sites">Tourist sites</string>
    <string name="rated_sites">Top-rated tourist sites</string>
    <string name="site_tile">Site title</string>
    <string name="site_province_and_town">Site province and town</string>
    <string name="site_details">Site description</string>
    <string name="logout">Sign out</string>
    <string name="exit">Exit</string>
    <string name="error">An unexpected error has occurred:</string>
    <string name="undefined_error">Unfortunately we cannot provide more information.</string>
    <string name="not_enough_site_rankings">There are no rated sites at this time.</string>
    <string name="edit_form">Edit profile</string>
    <string name="action_save_changes">Save changes</string>
    <string name="edit_profile_info">Edit only the fields where you want to change the current user information.</string>
    <string name="prompt_edit_password">New password</string>
    <string name="prompt_confirm_new_password">Re-enter new password</string>
    <string name="prompt_new_name">New name</string>
    <string name="prompt_new_surname">New surname</string>
    <string name="prompt_new_email">New email</string>
    <string name="existing_email">A user with such an email already exists</string>
    <string name="updated_successfully">User information updated successfully</string>
    <string name="location_not_granted">We can not access your device\'s location – some features may not work</string>
    <string name="not_enough_user_rankings">There are currently no participating users or those with one site visited.</string>
    <string name="user_ranking">User ranking</string>
    <string name="my_sites">The sites I visited</string>
    <string name="visited_on">Visited on:</string>
    <string name="not_enough_user_visites">You have not visited any tourist sites so far.</string>
    <string name="voting_not_enabled">You must visit this site to rate it</string>
    <string name="saved_vote">The rating was successfully saved</string>
    <string name="saved_comment">The comment was successfully added</string>
    <string name="comments">Comments</string>
    <string name="not_comments">There are no comments yet.</string>
    <string name="view_comments">View comments</string>
    <string name="comment_here">Add your comment</string>
    <string name="add_comment">Post comment</string>
    <string name="invalid_comment">Comment must be >5 characters</string>
    <string name="search_site">Search by name, province or town</string>
    <string name="no_search_results">There are no matching sites</string>
</resources>